--- a/PayslipApp.Service.Test/PayslipApp.Service.Test.csproj
+++ b/PayslipApp.Service.Test/PayslipApp.Service.Test.csproj
@@ -53,13 +53,16 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="PayslipServiceShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxCalculaterShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PayslipApp.Repository\PayslipApp.Repository.csproj">
