--- a/PayslipApp.Service/PayslipApp.Service.csproj
+++ b/PayslipApp.Service/PayslipApp.Service.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITaxCalculater.cs" />
     <Compile Include="PayslipService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaxCalculater.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PayslipApp.Repository\PayslipApp.Repository.csproj">
